--- a/index.html
+++ b/index.html
@@ -3,7 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Мой ДЗ</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a href="/">
+          Web Studio
+        </a>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./images/phone.svg" alt="phone icon" />
+            <img src="./images/button-phone.svg" alt="button-phone icon" />
+            <a href="tel:0507786155">0507786155 </a>
+          </li>
+          <li>
+            <img src="./images/mail.svg" alt="mail icon" />
+            <a href="mailto:onlyrobochaposhta@gmail.com">
+              onlyrobochaposhta@gmail.com
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+  </body>
 </html>
