--- a/index.html
+++ b/index.html
@@ -32,8 +32,72 @@
       </nav>
     </header>
     <main>
-      <section></section>
-      <section></section>
+      <section>
+        <h1>эффективные решения для вашего бизнеса</h1>
+        <a href="">Заказать услугу</a>
+      </section>
+      <section>
+        <h2>О нас</h2>
+        <ul>
+          <li>
+            <a href="">
+              <img
+                src="./images/backgraund-silver.svg"
+                alt="backgraund-silver"
+              />
+              <img src="./images/Satellite.svg" alt="Satelliet images" />
+            </a>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/backgraund-silver.svg"
+                alt="backgraund-silver"
+              />
+              <img src="./images/clock.svg" alt="clock" />
+            </a>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+
+          <li>
+            <a href="">
+              <img
+                src="./images/backgraund-silver.svg"
+                alt="backgraund-silver"
+              />
+              <img src="./images/pc.svg" alt="Graph to the top" />
+            </a>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/backgraund-silver.svg"
+                alt="backgraund-silver"
+              />
+              <img src="./images/Astronaut.svg" alt="Astronaut" />
+            </a>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
       <section></section>
     </main>
   </body>
