--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                 alt="backgraund-silver"
               />
               <img src="./images/Satellite.svg" alt="Satelliet images" />
+              <h3>Внимание к деталям</h3>
+              <p>
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
             </a>
-            <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
           </li>
           <li>
             <a href="">
@@ -60,12 +60,12 @@
                 alt="backgraund-silver"
               />
               <img src="./images/clock.svg" alt="clock" />
+              <h3>Пунктуальность</h3>
+              <p>
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
             </a>
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
           </li>
 
           <li>
@@ -75,12 +75,12 @@
                 alt="backgraund-silver"
               />
               <img src="./images/pc.svg" alt="Graph to the top" />
+              <h3>Планирование</h3>
+              <p>
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
             </a>
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
           </li>
           <li>
             <a href="">
@@ -89,15 +89,37 @@
                 alt="backgraund-silver"
               />
               <img src="./images/Astronaut.svg" alt="Astronaut" />
+              <h3>Современные технологии</h3>
+              <p>
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
             </a>
-            <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
+          </li>
+        </ul>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <a href=""
+              ><img src="./images/img1.svg" alt="" />
+              <p>Десктопные приложения</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/img2.svg" alt="" />
+              <p>Мобильные приложения</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/img3.svg" alt="" />
+              <p>Дизайнерские решения</p></a
+            >
           </li>
         </ul>
       </section>
+      <section></section>
       <section></section>
     </main>
   </body>
