completion all section

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
-        <ul>
-          <li>
-            <img src="./images/phone.svg" alt="phone icon" />
-            <img src="./images/button-phone.svg" alt="button-phone icon" />
-            <a href="tel:0507786155">0507786155 </a>
-          </li>
-          <li>
-            <img src="./images/mail.svg" alt="mail icon" />
-            <a href="mailto:onlyrobochaposhta@gmail.com">
-              onlyrobochaposhta@gmail.com
-            </a>
-          </li>
-        </ul>
       </nav>
+      <ul>
+        <li>
+          <img src="./images/phone.svg" alt="phone icon" />
+          <img src="./images/button-phone.svg" alt="button-phone icon" />
+          <a href="tel:0507786155">0507786155 </a>
+        </li>
+        <li>
+          <img src="./images/mail.svg" alt="mail icon" />
+          <a href="mailto:onlyrobochaposhta@gmail.com">
+            onlyrobochaposhta@gmail.com
+          </a>
+        </li>
+      </ul>
     </header>
     <main>
       <section>
@@ -97,30 +97,176 @@
             </a>
           </li>
         </ul>
+      </section>
+      <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
             <a href=""
               ><img src="./images/img1.svg" alt="" />
-              <p>Десктопные приложения</p></a
-            >
+              <p>Десктопные приложения</p>
+            </a>
           </li>
           <li>
             <a href=""
               ><img src="./images/img2.svg" alt="" />
-              <p>Мобильные приложения</p></a
-            >
+              <p>Мобильные приложения</p>
+            </a>
           </li>
           <li>
             <a href=""
               ><img src="./images/img3.svg" alt="" />
-              <p>Дизайнерские решения</p></a
-            >
+              <p>Дизайнерские решения</p>
+            </a>
           </li>
         </ul>
       </section>
-      <section></section>
-      <section></section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/card-bg.jpg" alt="Задний фон, белый" />
+            <img src="./images/photo1.jpg" alt="фото Джош Сміт" />
+            <h3>John Smith</h3>
+            <p>Product Designer</p>
+            <ul>
+              <li>
+                <a href=""
+                  ><img src="./images/instagram.svg" alt="instagram"
+                /></a>
+              </li>
+              <li>
+                <a href=""><img src="./images/twitter.svg" alt="twitter" /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./images/facebook.svg" alt="facebook"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./images/linkedin.svg" alt="linkedin"
+                /></a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <img src="./images/card-bg.jpg" alt="Задний фон, белый" />
+            <img src="./images/photo2.jpg" alt="фото Марта Стеварт" />
+            <h3>Marta Stewart</h3>
+            <p>Frontend Developer</p>
+            <ul>
+              <li>
+                <a href=""
+                  ><img src="./images/instagram.svg" alt="instagram"
+                /></a>
+              </li>
+              <li>
+                <a href=""><img src="./images/twitter.svg" alt="twitter" /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./images/facebook.svg" alt="facebook"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./images/linkedin.svg" alt="linkedin"
+                /></a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <img src="./images/card-bg.jpg" alt="Задний фон, белый" />
+            <img src="./images/photo3.jpg" alt="фото Роберт Джахис" />
+            <h3>Robert Jakis</h3>
+            <p>Marketing</p>
+            <ul>
+              <li>
+                <a href=""
+                  ><img src="./images/instagram.svg" alt="instagram"
+                /></a>
+              </li>
+              <li>
+                <a href=""><img src="./images/twitter.svg" alt="twitter" /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./images/facebook.svg" alt="facebook"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./images/linkedin.svg" alt="linkedin"
+                /></a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <img src="./images/card-bg.jpg" alt="Задний фон, белый" />
+            <img src="./images/photo4.jpg" alt="фото Мартин Дуе" />
+            <h3>Martin Doe</h3>
+            <p>UI Designer</p>
+            <ul>
+              <li>
+                <a href=""
+                  ><img src="./images/instagram.svg" alt="instagram"
+                /></a>
+              </li>
+              <li>
+                <a href=""><img src="./images/twitter.svg" alt="twitter" /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./images/facebook.svg" alt="facebook"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./images/linkedin.svg" alt="linkedin"
+                /></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+          <li>
+            <a href=""
+              ><img src="./images/logo 1.svg" alt="компания YA&CO"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/logo 2.svg" alt="компания tagline here"
+            /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/logo 3.svg" alt="компания" /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/logo 4.svg" alt="компания foster peters"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/logo 5.svg" alt="компания brand"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/logo 6.svg" alt="компания tagline"
+            /></a>
+          </li>
+        </ul>
+      </section>
     </main>
+    <footer></footer>
   </body>
 </html>
