replacement of English words with Russian in "alt"

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <a href="">
               <img
                 src="./images/backgraund-silver.svg"
-                alt="backgraund-silver"
+                alt="серый задний фон"
               />
-              <img src="./images/Satellite.svg" alt="Satelliet images" />
+              <img src="./images/Satellite.svg" alt="спутниковая тарелка" />
               <h3>Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по
@@ -57,9 +57,9 @@
             <a href="">
               <img
                 src="./images/backgraund-silver.svg"
-                alt="backgraund-silver"
+                alt="серый задний фон"
               />
-              <img src="./images/clock.svg" alt="clock" />
+              <img src="./images/clock.svg" alt="часы" />
               <h3>Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения
@@ -72,9 +72,9 @@
             <a href="">
               <img
                 src="./images/backgraund-silver.svg"
-                alt="backgraund-silver"
+                alt="серый задний фон"
               />
-              <img src="./images/pc.svg" alt="Graph to the top" />
+              <img src="./images/pc.svg" alt="график вверх" />
               <h3>Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной
@@ -86,9 +86,9 @@
             <a href="">
               <img
                 src="./images/backgraund-silver.svg"
-                alt="backgraund-silver"
+                alt="серый задний фон"
               />
-              <img src="./images/Astronaut.svg" alt="Astronaut" />
+              <img src="./images/Astronaut.svg" alt="астронавт" />
               <h3>Современные технологии</h3>
               <p>
                 Значимость этих проблем настолько очевидна, что реализация
