--- a/index.html
+++ b/index.html
@@ -103,19 +103,28 @@
         <ul>
           <li>
             <a href=""
-              ><img src="./images/img1.svg" alt="" />
+              ><img
+                src="./images/img1.svg"
+                alt="человек работает на ноутбуке"
+              />
               <p>Десктопные приложения</p>
             </a>
           </li>
           <li>
             <a href=""
-              ><img src="./images/img2.svg" alt="" />
+              ><img
+                src="./images/img2.svg"
+                alt="смартфон на котором приложение"
+              />
               <p>Мобильные приложения</p>
             </a>
           </li>
           <li>
             <a href=""
-              ><img src="./images/img3.svg" alt="" />
+              ><img
+                src="./images/img3.svg"
+                alt="персональный компьютер на котором сделан дизайн"
+              />
               <p>Дизайнерские решения</p>
             </a>
           </li>
