--- a/index.html
+++ b/index.html
@@ -276,6 +276,34 @@
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <address>
+        <a href="">Web Studio</a><br />
+        г. Киев, ул.Анны Ахматовой, 25 <br />
+        <a href="tel:0507786155">0507786155</a><br />
+        <a href="mailto:onlyrobochaposhta@gmail.com"
+          >onlyrobochaposhta@gmail.com</a
+        >
+      </address>
+      <p>присоединяйтесь</p>
+      <ul>
+        <li>
+          <a href=""><img src="./images/instagram 2.svg" alt="instagram" /></a>
+        </li>
+        <li>
+          <a href=""><img src="./images/twitter 2.svg" alt="twitter" /></a>
+        </li>
+        <li>
+          <a href=""><img src="./images/facebook 2.svg" alt="facebook" /></a>
+        </li>
+        <li>
+          <a href=""><img src="./images/linkedin 2.svg" alt="linkedin" /></a>
+        </li>
+      </ul>
+      <p>Подпишитесь на рассылку</p>
+      <input type="text" name="Email" />
+      <a href="">Подписаться</a>
+      <p>2020 | Developed by GoIT Students</p>
+    </footer>
   </body>
 </html>
