--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
           <li>
             <a href=""
               ><img
-                src="./images/img1.svg"
+                src="./images/img1.jpg"
                 alt="человек работает на ноутбуке"
+                width="380px"
+                height="294px"
               />
               <p>Десктопные приложения</p>
             </a>
@@ -113,8 +115,10 @@
           <li>
             <a href=""
               ><img
-                src="./images/img2.svg"
+                src="./images/img2.jpg"
                 alt="смартфон на котором приложение"
+                width="380px"
+                height="294px"
               />
               <p>Мобильные приложения</p>
             </a>
@@ -122,8 +126,10 @@
           <li>
             <a href=""
               ><img
-                src="./images/img3.svg"
+                src="./images/img3.jpg"
                 alt="персональный компьютер на котором сделан дизайн"
+                width="380px"
+                height="294px"
               />
               <p>Дизайнерские решения</p>
             </a>
@@ -134,8 +140,18 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/card-bg.jpg" alt="Задний фон, белый" />
-            <img src="./images/photo1.jpg" alt="фото Джош Сміт" />
+            <img
+              src="./images/card-bg.jpg"
+              alt="Задний фон, белый"
+              width="278px"
+              height="422"
+            />
+            <img
+              src="./images/photo1.jpg"
+              alt="фото Джош Сміт"
+              width="278px"
+              height="260px"
+            />
             <h3>John Smith</h3>
             <p>Product Designer</p>
             <ul>
@@ -161,8 +177,18 @@
           </li>
 
           <li>
-            <img src="./images/card-bg.jpg" alt="Задний фон, белый" />
-            <img src="./images/photo2.jpg" alt="фото Марта Стеварт" />
+            <img
+              src="./images/card-bg.jpg"
+              alt="Задний фон, белый"
+              width="278px"
+              height="422"
+            />
+            <img
+              src="./images/photo2.jpg"
+              alt="фото Марта Стеварт"
+              width="278px"
+              height="260"
+            />
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
             <ul>
@@ -188,8 +214,18 @@
           </li>
 
           <li>
-            <img src="./images/card-bg.jpg" alt="Задний фон, белый" />
-            <img src="./images/photo3.jpg" alt="фото Роберт Джахис" />
+            <img
+              src="./images/card-bg.jpg"
+              alt="Задний фон, белый"
+              width="278px"
+              height="422"
+            />
+            <img
+              src="./images/photo3.jpg"
+              alt="фото Роберт Джахис"
+              width="278px"
+              height="260"
+            />
             <h3>Robert Jakis</h3>
             <p>Marketing</p>
             <ul>
@@ -215,8 +251,18 @@
           </li>
 
           <li>
-            <img src="./images/card-bg.jpg" alt="Задний фон, белый" />
-            <img src="./images/photo4.jpg" alt="фото Мартин Дуе" />
+            <img
+              src="./images/card-bg.jpg"
+              alt="Задний фон, белый"
+              width="278px"
+              height="422"
+            />
+            <img
+              src="./images/photo4.jpg"
+              alt="фото Мартин Дуе"
+              width="278px"
+              height="260"
+            />
             <h3>Martin Doe</h3>
             <p>UI Designer</p>
             <ul>
