--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
               ><img
                 src="./images/img1.jpg"
                 alt="человек работает на ноутбуке"
-                width="380px"
-                height="294px"
+                width="380"
+                height="294"
               />
               <p>Десктопные приложения</p>
             </a>
@@ -117,8 +117,8 @@
               ><img
                 src="./images/img2.jpg"
                 alt="смартфон на котором приложение"
-                width="380px"
-                height="294px"
+                width="380"
+                height="294"
               />
               <p>Мобильные приложения</p>
             </a>
@@ -128,8 +128,8 @@
               ><img
                 src="./images/img3.jpg"
                 alt="персональный компьютер на котором сделан дизайн"
-                width="380px"
-                height="294px"
+                width="380"
+                height="294"
               />
               <p>Дизайнерские решения</p>
             </a>
@@ -143,14 +143,14 @@
             <img
               src="./images/card-bg.jpg"
               alt="Задний фон, белый"
-              width="278px"
+              width="278"
               height="422"
             />
             <img
               src="./images/photo1.jpg"
               alt="фото Джош Сміт"
-              width="278px"
-              height="260px"
+              width="278"
+              height="260"
             />
             <h3>John Smith</h3>
             <p>Product Designer</p>
@@ -180,13 +180,13 @@
             <img
               src="./images/card-bg.jpg"
               alt="Задний фон, белый"
-              width="278px"
+              width="278"
               height="422"
             />
             <img
               src="./images/photo2.jpg"
               alt="фото Марта Стеварт"
-              width="278px"
+              width="278"
               height="260"
             />
             <h3>Marta Stewart</h3>
@@ -217,13 +217,13 @@
             <img
               src="./images/card-bg.jpg"
               alt="Задний фон, белый"
-              width="278px"
+              width="278"
               height="422"
             />
             <img
               src="./images/photo3.jpg"
               alt="фото Роберт Джахис"
-              width="278px"
+              width="278"
               height="260"
             />
             <h3>Robert Jakis</h3>
@@ -254,13 +254,13 @@
             <img
               src="./images/card-bg.jpg"
               alt="Задний фон, белый"
-              width="278px"
+              width="278"
               height="422"
             />
             <img
               src="./images/photo4.jpg"
               alt="фото Мартин Дуе"
-              width="278px"
+              width="278"
               height="260"
             />
             <h3>Martin Doe</h3>
@@ -293,30 +293,30 @@
         <ul>
           <li>
             <a href=""
-              ><img src="./images/logo 1.svg" alt="компания YA&CO"
+              ><img src="./images/logo-1.svg" alt="компания YA&CO"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img src="./images/logo 2.svg" alt="компания tagline here"
+              ><img src="./images/logo-2.svg" alt="компания tagline here"
             /></a>
           </li>
           <li>
-            <a href=""><img src="./images/logo 3.svg" alt="компания" /></a>
+            <a href=""><img src="./images/logo-3.svg" alt="компания" /></a>
           </li>
           <li>
             <a href=""
-              ><img src="./images/logo 4.svg" alt="компания foster peters"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/logo 5.svg" alt="компания brand"
+              ><img src="./images/logo-4.svg" alt="компания foster peters"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img src="./images/logo 6.svg" alt="компания tagline"
+              ><img src="./images/logo-5.svg" alt="компания brand"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/logo-6.svg" alt="компания tagline"
             /></a>
           </li>
         </ul>
@@ -334,16 +334,16 @@
       <p>присоединяйтесь</p>
       <ul>
         <li>
-          <a href=""><img src="./images/instagram 2.svg" alt="instagram" /></a>
+          <a href=""><img src="./images/instagram-2.svg" alt="instagram" /></a>
         </li>
         <li>
-          <a href=""><img src="./images/twitter 2.svg" alt="twitter" /></a>
+          <a href=""><img src="./images/twitter-2.svg" alt="twitter" /></a>
         </li>
         <li>
-          <a href=""><img src="./images/facebook 2.svg" alt="facebook" /></a>
+          <a href=""><img src="./images/facebook-2.svg" alt="facebook" /></a>
         </li>
         <li>
-          <a href=""><img src="./images/linkedin 2.svg" alt="linkedin" /></a>
+          <a href=""><img src="./images/linkedin-2.svg" alt="linkedin" /></a>
         </li>
       </ul>
       <p>Подпишитесь на рассылку</p>
