--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       <ul>
         <li>
           <img src="./images/phone.svg" alt="phone icon" />
-          <img src="./images/button-phone.svg" alt="button-phone icon" />
           <a href="tel:0507786155">0507786155 </a>
         </li>
         <li>
@@ -139,13 +138,8 @@
       <section>
         <h2>Наша команда</h2>
         <ul>
+          <!-- Джош Сміт -->
           <li>
-            <img
-              src="./images/card-bg.jpg"
-              alt="Задний фон, белый"
-              width="278"
-              height="422"
-            />
             <img
               src="./images/photo1.jpg"
               alt="фото Джош Сміт"
@@ -175,14 +169,8 @@
               </li>
             </ul>
           </li>
-
+          <!-- Марта Стеварт -->
           <li>
-            <img
-              src="./images/card-bg.jpg"
-              alt="Задний фон, белый"
-              width="278"
-              height="422"
-            />
             <img
               src="./images/photo2.jpg"
               alt="фото Марта Стеварт"
@@ -212,14 +200,8 @@
               </li>
             </ul>
           </li>
-
+          <!-- Роберт Джахис -->
           <li>
-            <img
-              src="./images/card-bg.jpg"
-              alt="Задний фон, белый"
-              width="278"
-              height="422"
-            />
             <img
               src="./images/photo3.jpg"
               alt="фото Роберт Джахис"
@@ -249,14 +231,8 @@
               </li>
             </ul>
           </li>
-
+          <!-- Мартин Дуе -->
           <li>
-            <img
-              src="./images/card-bg.jpg"
-              alt="Задний фон, белый"
-              width="278"
-              height="422"
-            />
             <img
               src="./images/photo4.jpg"
               alt="фото Мартин Дуе"
