changed tag <address>

--- a/index.html
+++ b/index.html
@@ -286,14 +286,16 @@
       </section>
     </main>
     <footer>
-      <address>
-        <a href="">Web Studio</a><br />
-        г. Киев, ул.Анны Ахматовой, 25 <br />
-        <a href="tel:0507786155">0507786155</a><br />
-        <a href="mailto:onlyrobochaposhta@gmail.com"
-          >onlyrobochaposhta@gmail.com</a
-        >
-      </address>
+      <a href="">Web Studio</a>
+      <ul>
+        <li>г. Киев, ул.Анны Ахматовой, 25</li>
+        <li><a href="tel:0507786155">0507786155</a></li>
+        <li>
+          <a href="mailto:onlyrobochaposhta@gmail.com">
+            onlyrobochaposhta@gmail.com
+          </a>
+        </li>
+      </ul>
       <p>присоединяйтесь</p>
       <ul>
         <li>
