--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       </nav>
       <ul>
         <li>
-          <img src="./images/phone.svg" alt="phone icon" />
+          <img src="./images/phone.svg" alt="телефон" />
           <a href="tel:0507786155">0507786155 </a>
         </li>
         <li>
-          <img src="./images/mail.svg" alt="mail icon" />
+          <img src="./images/mail.svg" alt="Почта" />
           <a href="mailto:onlyrobochaposhta@gmail.com">
             onlyrobochaposhta@gmail.com
           </a>
@@ -287,8 +287,8 @@
     </main>
     <footer>
       <a href="">Web Studio</a>
+      <p>г. Киев, ул.Анны Ахматовой, 25</p>
       <ul>
-        <li>г. Киев, ул.Анны Ахматовой, 25</li>
         <li><a href="tel:0507786155">0507786155</a></li>
         <li>
           <a href="mailto:onlyrobochaposhta@gmail.com">
